[DOCS] Fixes more internal links

--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -243,7 +243,8 @@ $client = ClientBuilder::create()
             ->build();
 ----
 
-For more details, please see the dedicated page on link:_connection_pool.html[configuring connection pools].
+For more details, please see the dedicated page on 
+<<connection_pool,configuring connection pools>>.
 
 === Setting the Connection Selector
 
@@ -259,7 +260,8 @@ $client = ClientBuilder::create()
             ->build();
 ----
 
-For more details, please see the dedicated page on link:_selectors.html[configuring selectors].
+For more details, please see the dedicated page on
+<<selectors,configuring selectors>>.
 
 
 === Setting the Serializer
@@ -279,7 +281,8 @@ $client = ClientBuilder::create()
             ->build();
 ----
 
-For more details, please see the dedicated page on link:_serializers.html[configuring serializers].
+For more details, please see the dedicated page on
+<<serializers,configuring serializers>>.
 
 
 === Setting a custom ConnectionFactory
