--- a/docs/quickstart.asciidoc
+++ b/docs/quickstart.asciidoc
@@ -87,7 +87,7 @@ $response = $client->get($params);
 print_r($response);
 ----------------------------
 
-The response contains some metadata (index, etc) as well as a `_source` field...this is the original document
+The response contains some metadata (index, version, etc.) as well as a `_source` field, which is the original document
 that you sent to Elasticsearch.
 
 [source,php]
