Switch index examples for current implementation

--- a/examples/1f336ecc62480c1d56351cc2f82d0d08.adoc
+++ b/examples/1f336ecc62480c1d56351cc2f82d0d08.adoc
@@ -1,3 +1,5 @@
+[source,php]
+----
 $params = [
     'index' => 'twitter',
     'id'    => '1',
@@ -8,3 +10,4 @@ $params = [
     'version_type' => 'external',
 ];
 $response = $client->index($params);
+----
