--- a/examples/048d8abd42d094bbdcf4452a58ccb35b.adoc
+++ b/examples/048d8abd42d094bbdcf4452a58ccb35b.adoc
@@ -1,3 +1,5 @@
+[source,php]
+----
 $params = [
     'index' => 'twitter',
     'id'    => '1',
@@ -6,6 +8,6 @@ $params = [
         'post_date' => '2009-11-15T14:12:12',
         'message'   => 'trying out Elasticsearch',
     ],
-    'op_type' => 'create',
 ];
-$response = $client->index($params);
+$response = $client->create($params);
+----
