--- a/examples/625dc94df1f9affb49a082fd99d41620.adoc
+++ b/examples/625dc94df1f9affb49a082fd99d41620.adoc
@@ -1,11 +1,13 @@
+[source,php]
+----
 $params = [
     'index' => 'twitter',
-    'id'    => '1',
     'body'  => [
         'user'      => 'kimchy',
         'post_date' => '2009-11-15T14:12:12',
         'message'   => 'trying out Elasticsearch',
     ],
-    'timeout' => '5m',
+    'routing' => 'kimchy',
 ];
 $response = $client->index($params);
+----
