--- a/examples/bb143628fd04070683eeeadc9406d9cc.adoc
+++ b/examples/bb143628fd04070683eeeadc9406d9cc.adoc
@@ -1,5 +1,8 @@
+[source,php]
+----
 $params = [
     'index' => 'twitter',
+    'id'    => '1',
     'body'  => [
         'user'      => 'kimchy',
         'post_date' => '2009-11-15T14:12:12',
@@ -7,3 +10,4 @@ $params = [
     ],
 ];
 $response = $client->index($params);
+----
