--- a/examples/d718b63cf1b6591a1d59a0cf4fd995eb.adoc
+++ b/examples/d718b63cf1b6591a1d59a0cf4fd995eb.adoc
@@ -1,10 +1,14 @@
+[source,php]
+----
 $params = [
     'index' => 'twitter',
+    'id'    => '1',
     'body'  => [
         'user'      => 'kimchy',
         'post_date' => '2009-11-15T14:12:12',
         'message'   => 'trying out Elasticsearch',
     ],
-    'routing' => 'kimchy',
+    'op_type' => 'create',
 ];
 $response = $client->index($params);
+----
