--- a/examples/docs/asciidoc/GettingStarted/37c778346eb67042df5e8edf2485e40a.asciidoc
+++ b/examples/docs/asciidoc/GettingStarted/37c778346eb67042df5e8edf2485e40a.asciidoc
@@ -1,4 +1,4 @@
 [source,php]
 ----
-include::./../../src/Examples/Docs/GettingStarted.php[tag=37c778346eb67042df5e8edf2485e40a]
+include::./../../src/Examples/Docs/GettingStarted.php[tag=37c778346eb67042df5e8edf2485e40a,indent=0]
 ----
