--- a/docs/crud.asciidoc
+++ b/docs/crud.asciidoc
@@ -2,8 +2,8 @@
 == Indexing Documents
 
 IMPORTANT: Please note that mapping types will disappear from {es}, read more 
-{ref}/removal-of-types.html[here]. If you migrated types from {es} 6 to 7, you 
-can address these with the `type` param.
+{ref-7x}/removal-of-types.html[here]. If you migrated types from {es} 6 to 7, 
+you can address these with the `type` param.
 
 When you add documents to {es}, you index JSON documents. This maps naturally to 
 PHP associative arrays, since they can easily be encoded in JSON. Therefore, in 
