[DOCS] Adds Connecting section to PHP docs.

--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -7,7 +7,7 @@ include::overview.asciidoc[]
 
 include::installation.asciidoc[]
 
-include::quickstart.asciidoc[]
+include::connecting.asciidoc[]
 
 include::configuration.asciidoc[]
 
