--- a/docs/connecting.asciidoc
+++ b/docs/connecting.asciidoc
@@ -117,6 +117,7 @@ http://curl.haxx.se/changes.html[curl changelog].
 =================
 
 
+[discrete]
 ===== Public CA Certificates
 
 If your certificate has been signed by a public Certificate Authority and your 
@@ -154,6 +155,7 @@ $client = ClientBuilder::create()
 ----
 
 
+[discrete]
 ===== Self-signed Certificates
 
 Self-signed certificates are certs that have not been signed by a public CA. 
