--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -41,4 +41,4 @@ include::experimental-beta-apis.asciidoc[]
 
 include::build/classes.asciidoc[]
 
-include::{asciidoc-dir}/../../shared/attributes.asciidoc[]
+include::redirects.asciidoc[]
