--- a/docs/selectors.asciidoc
+++ b/docs/selectors.asciidoc
@@ -1,5 +1,5 @@
 [[selectors]]
-== Selectors
+=== Selectors
 
 The connection pool maintains the list of connections, and decides when nodes 
 should transition from alive to dead (and vice versa). It has no logic to choose 
@@ -11,7 +11,7 @@ choose from.
 
 
 [discrete]
-=== RoundRobinSelector (Default)
+==== RoundRobinSelector (Default)
 
 This selector returns connections in a round-robin fashion. Node #1 is selected 
 on the first request, Node #2 on the second request, and so on. This ensures an 
@@ -30,8 +30,9 @@ $client = ClientBuilder::create()
 
 Note that the implementation is specified via a namespace path to the class.
 
+
 [discrete]
-=== StickyRoundRobinSelector
+==== StickyRoundRobinSelector
 
 This selector is "sticky", so that it prefers to reuse the same connection 
 repeatedly. For example, Node #1 is chosen on the first request. Node #1 will 
@@ -65,8 +66,9 @@ $client = ClientBuilder::create()
 
 Note that the implementation is specified via a namespace path to the class.
 
+
 [discrete]
-=== RandomSelector
+==== RandomSelector
 
 This selector returns a random node, regardless of state. It is generally just 
 for testing.
@@ -125,5 +127,19 @@ $mySelector = new MyCustomSelector();
 $client = ClientBuilder::create()
             ->setSelector($mySelector)                             // object injection
             ->setSelector('\MyProject\Selectors\FirstSelector')    // or namespace
+            ->build();
+----
+
+
+[discrete]
+==== Quick setup
+
+Selectors can be changed via the `setSelector()` method:
+
+[source,php]
+----
+$selector = '\Elasticsearch\ConnectionPool\Selectors\StickyRoundRobinSelector';
+$client = ClientBuilder::create()
+            ->setSelector($selector)
             ->build();
 ----
