--- a/docs/serializers.asciidoc
+++ b/docs/serializers.asciidoc
@@ -1,5 +1,5 @@
 [[serializers]]
-== Serializers
+=== Serializers
 
 The client has three serializers available. You will most likely never need
 to change the serializer, unless you have special requirements or are 
@@ -11,11 +11,12 @@ JSON.
 
 The default serializer is the `SmartSerializer`.
 
-[discrete]
-=== SmartSerializer
 
 [discrete]
-==== Serialize()
+==== SmartSerializer
+
+[discrete]
+===== Serialize()
 
 The `SmartSerializer` inspects the data to be encoded. If the request body is 
 provided as a string, it is passed directly to {es} as a string. This allows 
@@ -27,8 +28,9 @@ empty array, the serializer manually converts the JSON from an empty array
 (`[]`) to an empty object (`{}`) so that it is valid JSON for {es} request 
 bodies.
 
+
 [discrete]
-==== Deserialize()
+===== Deserialize()
 
 When decoding the response body, the `SmartSerializer` introspects the 
 `content_type` headers to determine the appropriate encoding. If the data is
@@ -38,8 +40,9 @@ is returned as a string.
 This functionality is required to cooperate with endpoints such as the `Cat` 
 endpoints, which return tabular text instead of JSON.
 
+
 [discrete]
-==== Selecting the SmartSerializer
+===== Selecting the SmartSerializer
 
 The `SmartSerializer` is selected by default, but if you wish to manually 
 configure it for explicitness, you can do so by using the `setSerializer()` 
@@ -55,11 +58,13 @@ $client = ClientBuilder::create()
 Note that the serializer is configured by specifying a namespace path to the 
 serializer.
 
-[discrete]
-=== ArrayToJSONSerializer
 
 [discrete]
-==== Serialize()
+==== ArrayToJSONSerializer
+
+
+[discrete]
+===== Serialize()
 
 The `ArrayToJSONSerializer` inspects the data to be encoded. If the request body
 is provided as a string, it is passed directly to {es} as a string. This allows 
@@ -71,14 +76,16 @@ empty array, the serializer manually converts the JSON from an empty array
 (`[]`) to an empty object (`{}`) so that it is valid JSON for {es} request 
 bodies.
 
+
 [discrete]
-==== Deserialize()
+===== Deserialize()
 
 When decoding the response body, everything is decoded to JSON from JSON. If the 
 data is not valid JSON, `null` will be returned.
 
+
 [discrete]
-==== Selecting the ArrayToJSONSerializer
+===== Selecting the ArrayToJSONSerializer
 
 You can select `ArrayToJSONSerializer` by using the `setSerializer()` method on 
 the `ClientBuilder` object:
@@ -94,11 +101,13 @@ $client = ClientBuilder::create()
 Note that the serializer is configured by specifying a namespace path to the 
 serializer.
 
-[discrete]
-=== EverythingToJSONSerializer
 
 [discrete]
-==== Serialize()
+==== EverythingToJSONSerializer
+
+
+[discrete]
+===== Serialize()
 
 The `EverythingToJSONSerializer` tries to convert everything to JSON.
 
@@ -109,11 +118,13 @@ JSON for Elasticsearch request bodies.
 If the data was not an array and/or not convertible to JSON, the method returns
 `null`.
 
+
 [discrete]
-==== Deserialize()
+===== Deserialize()
 
 When decoding the response body, everything is decoded to JSON from JSON. If the 
 data is not valid JSON, `null` is returned.
+
 
 [discrete]
 ==== Selecting the EverythingToJSONSerializer
@@ -133,7 +144,7 @@ serializer.
 
 
 [discrete]
-=== Implementing your own Serializer
+==== Implementing your own Serializer
 
 If you want to use your own custom serializer, you need to implement the 
 `SerializerInterface` interface. Please keep in mind that the client uses a 
@@ -194,5 +205,21 @@ $mySerializer->setFoo("bar");
 
 $client = ClientBuilder::create()
             ->setSerializer($mySerializer);
+            ->build();
+----
+
+
+[discrete]
+==== Quick setup
+
+The majority of people will never need to change the default Serializer 
+(`SmartSerializer`), but if you need to, it can be done via the 
+`setSerializer()` method:
+
+[source,php]
+----
+$serializer = '\Elasticsearch\Serializers\SmartSerializer';
+$client = ClientBuilder::create()
+            ->setSerializer($serializer)
             ->build();
 ----
