--- a/docs/connection-pool.asciidoc
+++ b/docs/connection-pool.asciidoc
@@ -1,5 +1,5 @@
 [[connection_pool]]
-== Connection Pool
+=== Connection Pool
 
 The connection pool is an object inside the client that is responsible for 
 maintaining the current list of nodes. Theoretically, nodes are either dead or 
@@ -26,8 +26,9 @@ be alive, so `NoNodesAvailableException` is returned.
 
 There are several connection pool implementations that you can choose from:
 
+
 [discrete]
-=== staticNoPingConnectionPool (default)
+==== staticNoPingConnectionPool (default)
 
 This connection pool maintains a static list of hosts which are assumed to be 
 alive when the client initializes. If a node fails a request, it is marked as 
@@ -49,8 +50,9 @@ $client = ClientBuilder::create()
 
 Note that the implementation is specified via a namespace path to the class.
 
+
 [discrete]
-=== staticConnectionPool
+==== staticConnectionPool
 
 Identical to the `StaticNoPingConnectionPool`, except it pings nodes before they 
 are used to determine if they are alive. This may be useful for long-running 
@@ -68,8 +70,9 @@ $client = ClientBuilder::create()
 
 Note that the implementation is specified via a namespace path to the class.
 
+
 [discrete]
-=== simpleConnectionPool
+==== simpleConnectionPool
 
 The `SimpleConnectionPool` returns the next node as specified by the selector; 
 it does not track node conditions. It returns nodes either they are dead or 
@@ -89,8 +92,9 @@ $client = ClientBuilder::create()
 
 Note that the implementation is specified via a namespace path to the class.
 
+
 [discrete]
-=== sniffingConnectionPool
+==== sniffingConnectionPool
 
 Unlike the two previous static connection pools, this one is dynamic. The user 
 provides a seed list of hosts, which the client uses to "sniff" and discover the 
@@ -108,8 +112,9 @@ $client = ClientBuilder::create()
 
 Note that the implementation is specified via a namespace path to the class.
 
+
 [discrete]
-=== Custom Connection Pool
+==== Custom Connection Pool
 
 If you wish to implement your own custom Connection Pool, your class must 
 implement `ConnectionPoolInterface`:
@@ -202,8 +207,9 @@ $client = ClientBuilder::create()
             ->build();
 ----
 
+
 [discrete]
-=== Which connection pool to choose? PHP and connection pooling
+==== Which connection pool to choose? PHP and connection pooling
 
 At first glance, the `sniffingConnectionPool` implementation seems superior. For 
 many languages, it is. In PHP, the conversation is a bit more nuanced.
@@ -229,3 +235,19 @@ For this reason the default connection pool is currently the
 `staticNoPingConnectionPool`. You can, of course, change this default - but we 
 strongly recommend you to perform load test and to verify that the change does 
 not negatively impact the performance.
+
+
+[discrete]
+==== Quick setup
+
+As you see above, there are several connection pool implementations available, 
+and each has slightly different behavior (pinging vs no pinging, and so on). 
+Connection pools are configured via the `setConnectionPool()` method:
+
+[source,php]
+----
+$connectionPool = '\Elasticsearch\ConnectionPool\StaticNoPingConnectionPool';
+$client = ClientBuilder::create()
+            ->setConnectionPool($connectionPool)
+            ->build();
+----
