--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -9,6 +9,8 @@ Custom configuration is accomplished before the client is instantiated, through
 the ClientBuilder helper object. You can find all the configuration options and 
 check sample code that helps you replace the various components.
 
+To learn more about JSON in PHP, read <<php_json_objects>>.
+
 * <<host-config>>
 * <<set-retries>>
 * <<enabling_logger>>
@@ -23,6 +25,8 @@ check sample code that helps you replace the various components.
 * <<per_request_configuration>>
 * <<future_mode>>
 
+
+include::php_json_objects.asciidoc[]
 
 include::host-config.asciidoc[]
 
