--- a/docs/community.asciidoc
+++ b/docs/community.asciidoc
@@ -1,8 +1,8 @@
 [[community_dsls]]
-== Community DSLs
+=== Community DSLs
 
 [discrete]
-=== ElasticsearchDSL
+==== ElasticsearchDSL
 
 https://github.com/ongr-io/ElasticsearchDSL[Link: ElasticsearchDSL]
 [quote, ElasticsearchDSL]
@@ -13,7 +13,7 @@ it to an array.
 __________________________
 
 [discrete]
-=== elasticsearcher
+==== elasticsearcher
 
 https://github.com/madewithlove/elasticsearcher[Link: elasticsearcher]
 
@@ -26,7 +26,7 @@ client.
 __________________________
 
 [discrete]
-=== ElasticSearchQueryDSL
+==== ElasticSearchQueryDSL
 
 https://github.com/gskema/elasticsearch-query-dsl-php[Link: ElasticSearchQueryDSL]
 
@@ -38,13 +38,14 @@ explicit naming.
 __________________________
 
 
-== Community Integrations
+[[community-integrations]]
+=== Community Integrations
 
 [discrete]
-=== Symfony
+==== Symfony
 
 [discrete]
-==== ONGR Elasticsearch Bundle
+===== ONGR Elasticsearch Bundle
 
 https://github.com/ongr-io/ElasticsearchBundle[Link: ONGR {es} Bundle]
 
@@ -70,7 +71,7 @@ Technical goodies:
 __________________________
 
 [discrete]
-==== FOS Elastica Bundle
+===== FOS Elastica Bundle
 
 https://github.com/FriendsOfSymfony/FOSElasticaBundle[Link: FOS Elastica Bundle]
 
@@ -87,10 +88,10 @@ __________________________
 
 
 [discrete]
-=== Drupal
+==== Drupal
 
 [discrete]
-==== {es} Connector
+===== {es} Connector
 
 https://www.drupal.org/project/elasticsearch_connector[Link: {es} Connector]
 
@@ -101,10 +102,10 @@ Drupal.
 __________________________
 
 [discrete]
-=== Laravel
+==== Laravel
 
 [discrete]
-==== shift31/Laravel-Elasticsearch
+===== shift31/Laravel-Elasticsearch
 
 https://github.com/shift31/laravel-elasticsearch[Link: shift31/Laravel-Elasticsearch]
 
@@ -115,7 +116,7 @@ __________________________
 
 
 [discrete]
-==== cviebrock/Laravel-Elasticsearch
+===== cviebrock/Laravel-Elasticsearch
 
 https://github.com/cviebrock/laravel-elasticsearch[Link: cviebrock/Laravel-Elasticsearch]
 
@@ -126,7 +127,7 @@ __________________________
 
 
 [discrete]
-==== Plastic
+===== Plastic
 
 https://github.com/sleimanx2/plastic[Link: Plastic]
 
@@ -138,10 +139,10 @@ mapping, querying, and storing eloquent models.
 __________________________
 
 [discrete]
-=== Helper
+==== Helper
 
 [discrete]
-==== Index Helper
+===== Index Helper
 
 https://github.com/Nexucis/es-php-index-helper[Link: nexucis/es-php-index-helper]
 
