Added compatibility section in doc + updated release notes + updated README

--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -5,6 +5,8 @@ include::{asciidoc-dir}/../../shared/attributes.asciidoc[]
 
 include::overview.asciidoc[]
 
+include::compatibility.asciidoc[]
+
 include::installation.asciidoc[]
 
 include::connecting.asciidoc[]
